--- a/Proposal/references.bib
+++ b/Proposal/references.bib
@@ -223,3 +223,15 @@ doi = {10.1049/ip-rsn:20045017}
   howpublished = {\url{http://nationaldefensemagazine.org/articles/2023/3/28/passive-radar-can-give-soldiers-stealth-in-urban-battlegrounds}},
   note = {Accessed: 2024-03-11}
 }
+
+@INPROCEEDINGS{antennaArchitecture,
+  author={Yardley, Heath J.},
+  booktitle={2007 IEEE Radar Conference}, 
+  title={Bistatic Radar Based on DAB Illuminators: The Evolution of a Practical System}, 
+  year={2007},
+  volume={},
+  number={},
+  pages={688-692},
+  keywords={Bistatic radar;Bandwidth;Digital audio broadcasting;Radar detection;Radar antennas;Resonator filters;Interference;Transmitters;Signal design;Passive radar},
+  doi={10.1109/RADAR.2007.374302}}
+
